fixed spelling error in name of finite-diff matrix

--- a/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
+++ b/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
@@ -129,32 +129,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "psi_vec = populate_vector(psi_func)\n",
     "v_vec = populate_vector(v_func)\n",
-    "finite_difference_vec = second_order_central_finite_diff()"
+    "num_deriv_mat = second_order_central_finite_diff()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gradient = (1/h**2)*np.dot(psi_vec.T, finite_difference_vec)"
+    "psi_gradient = (1/h**2)*np.dot(psi_vec.T, num_deriv_mat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "kinetic_energy = -reduced_planck**2/(2*e_mass)\n",
-    "hamilton_operator = kinetic_energy * gradient + v_vec"
+    "hamilton_operator = kinetic_energy * psi_gradient + v_vec"
    ]
   },
   {
