--- a/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
+++ b/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
@@ -109,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def second_order_central_finite_diff():\n",
+    "def finite_difference_scheme():\n",
     "    m = np.zeros((N,N))\n",
     "    for i in range(1, N-1):\n",
     "        if i-1 >= 0:\n",
@@ -129,40 +129,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "psi_vec = populate_vector(psi_func)\n",
-    "v_vec = populate_vector(v_func)\n",
-    "num_deriv_mat = second_order_central_finite_diff()"
+    "psi_vector = populate_vector(psi_func)\n",
+    "v_vector = populate_vector(v_func)\n",
+    "finite_difference_matrix = finite_difference_scheme()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "psi_gradient = (1/h**2)*np.dot(psi_vec.T, num_deriv_mat)"
+    "#kinetic_constant = -reduced_planck**2/(2*e_mass) # Kan være 1 inntil videre\n",
+    "h_matrix = (1/h**2)*(psi_vector * finite_difference_matrix) + (v_vector * psi_vector)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kinetic_energy = -reduced_planck**2/(2*e_mass)\n",
-    "hamilton_operator = kinetic_energy * psi_gradient + v_vec"
+    "e = h*(psi_vector.T @ h_matrix)@psi_vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[42.81650072]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e"
+   ]
   },
   {
    "cell_type": "code",
