Finite difference method no longer produces matrix with first and last row of zeros

--- a/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
+++ b/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
@@ -179,6 +179,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = h*(np.matmul(psi_vector.T, h_matrix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[42.81650072]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
