Made a compute_e function that takes sigma and x0

--- a/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
+++ b/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
@@ -9,13 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from typing import Callable"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,30 +81,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def psi_func(x):\n",
+    "def psi_func(x, *args):\n",
+    "    x0, sigma = args\n",
     "    return (1/np.sqrt(2*sigma))*np.exp(-((x-x0)**2)/2*sigma**2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def populate_vector(func: Callable[[np.ndarray], np.float64]) -> np.ndarray:\n",
-    "    vector = np.zeros((N, 1))\n",
-    "    for i in range(N):\n",
-    "        vector[i] = func(xi[i])\n",
-    "    return vector"
+    "def populate_vector(func, *args):\n",
+    "    vector = [func(xi[i], *args) for i in range(N)]\n",
+    "    return np.array(vector).reshape(-1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,45 +119,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_e(x0, sigma):\n",
+    "    psi_vector = populate_vector(psi_func, x0, sigma)\n",
+    "    v_vector = populate_vector(v_func)\n",
+    "    finite_difference_matrix = finite_difference_scheme()\n",
+    "    #kinetic_constant = -reduced_planck**2/(2*e_mass) # Kan være 1 inntil videre\n",
+    "    h_matrix = (1/h**2)*(psi_vector * finite_difference_matrix) + (v_vector * psi_vector)\n",
+    "    \n",
+    "    return h*(psi_vector.T @ h_matrix) @ psi_vector"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating the hamiltonian operator"
+    "## Computing the Energy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
-    "psi_vector = populate_vector(psi_func)\n",
-    "v_vector = populate_vector(v_func)\n",
-    "finite_difference_matrix = finite_difference_scheme()"
+    "e = compute_e(x0=0, sigma=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#kinetic_constant = -reduced_planck**2/(2*e_mass) # Kan være 1 inntil videre\n",
-    "h_matrix = (1/h**2)*(psi_vector * finite_difference_matrix) + (v_vector * psi_vector)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "e = h*(psi_vector.T @ h_matrix)@psi_vector"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +161,7 @@
        "array([[42.81650072]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
