Bugfixes and comments

--- a/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
+++ b/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
@@ -28,16 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# sigma = 1\n",
     "# x0 = 0\n",
     "\n",
-    "planck = 6.626e-34\n",
-    "reduced_planck = planck/(2*np.pi)\n",
-    "e_mass = 9.109e-31"
+    "#planck = 6.626e-34\n",
+    "#reduced_planck = planck/(2*np.pi)\n",
+    "#e_mass = 9.109e-31"
    ]
   },
   {
@@ -49,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Length of interval\n",
-    "L = 10 \n",
+    "L = 20\n",
     "# No. of subintervals\n",
-    "N = 100\n",
+    "N = 500\n",
     "# Stepsize\n",
     "h = L / (N-1)\n",
     "\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +92,13 @@
     "    \"\"\" Returns the wave function. *args takes optional number of parameters \n",
     "    is just an implementation detail to facilitate the populate_vector function\"\"\"\n",
     "    x0, sigma = args\n",
-    "    return (1/np.sqrt(2*sigma))*np.exp(-((x-x0)**2)/2*sigma**2)"
+    "\n",
+    "    return np.sqrt(1/(sigma*np.sqrt(2*np.pi)))*np.exp(-(x-x0)**2/(4*sigma**2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,14 +137,16 @@
     "    psi_vector = populate_vector(psi_func, x0, sigma)\n",
     "    \n",
     "    #kinetic_constant = -reduced_planck**2/(2*e_mass) # Kan være 1 inntil videre\n",
-    "    h_matrix = (1/h**2)*(psi_vector * finite_difference_matrix) + (v_vector * psi_vector)\n",
+    "    h_psi = -1/2*(1/h**2)*(finite_difference_matrix @ psi_vector) + (v_vector * psi_vector)\n",
     "     \n",
-    "    return (h*(psi_vector.T @ h_matrix) @ psi_vector)[0][0]"
+    "    e = h*(psi_vector.T @ h_psi)  \n",
+    "    \n",
+    "    return e[0][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,12 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_step(x0, sigma):\n",
-    "    lr = 1e-4\n",
+    "    lr = 0.01\n",
     "    # print(finite_difference_e(sigma, x0))\n",
     "    new_x0 = x0 - lr*finite_difference_e(x0, sigma)\n",
     "    new_sigma = sigma - lr*finite_difference_e(sigma, x0)\n",
@@ -170,24 +173,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_descent(x0, sigma):\n",
     "    iterations = 0\n",
-    "    max_iterations = 10000\n",
+    "    max_iterations = 2000\n",
     "    precision = 1e-7\n",
     "    \n",
+    "    #e = \n",
+    "    #e_new\n",
+    "    \n",
+    "    \n",
     "    while (iterations < max_iterations):\n",
-    "        \n",
-    "        #Printer E-verdier\n",
-    "        if iterations % 100 == 0:\n",
-    "            print(compute_e(x0, sigma))\n",
-    "        iterations += 1\n",
     "    \n",
     "        x0, sigma = gradient_step(x0, sigma)\n",
-    "    \n",
+    "        iterations += 1\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "    return x0, sigma"
    ]
   },
@@ -199,21 +204,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Tweake parameter(lr, x0, sigma).\n",
+    "Lage plot\n",
+    "Sette stoppkriterier.\n",
+    "\n",
+    "\n",
+    "fasit\n",
+    "x0 = 0\n",
+    "sigma = 1/sqrt(2)\n",
+    "e = 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2.  1.  0. ...  0.  0.  0.]\n",
+      " [ 1. -2.  1. ...  0.  0.  0.]\n",
+      " [ 0.  1. -2. ...  0.  0.  0.]\n",
+      " ...\n",
+      " [ 0.  0.  0. ... -2.  1.  0.]\n",
+      " [ 0.  0.  0. ...  1. -2.  1.]\n",
+      " [ 0.  0.  0. ...  0.  1. -2.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Initializing vectors\n",
     "v_vector = populate_vector(v_func)\n",
     "finite_difference_matrix = finite_difference_scheme()\n",
-    "    \n",
+    "print(finite_difference_matrix)    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -222,129 +256,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Energy at guess 0.018154739403867106\n",
-      "\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n",
-      "0.018154739403867106\n"
+      "Energy at guess 0.5202818631885944\n",
+      "0.09683819984156898 0.7747055987325618\n",
+      "0.5130131137419279\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(0.5, 2.0)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x0 = 0.5\n",
-    "sigma = 2\n",
+    "x0 = 0.1\n",
+    "sigma = 0.8\n",
     "\n",
     "e = compute_e(x0, sigma)\n",
     "print(f\"Energy at guess {e}\")\n",
-    "print()\n",
-    "gradient_descent(x0, sigma)"
+    "new_x0, new_sigma = gradient_descent(x0, sigma) \n",
+    "print(new_x0, new_sigma)\n",
+    "print(compute_e(new_x0, new_sigma))"
    ]
   },
   {
