updates the finite_difference function. added more comments to our in general

--- a/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
+++ b/DATA3750_The_Energy_of_a_Quantum_Physical_Two_Body_System.ipynb
@@ -9,10 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,41 +75,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def v_func(x):\n",
-    "    \"\"\" Returns the portential function of the quantum system \"\"\"\n",
+    "    \"\"\"Calculates the potential function of the quantum system\"\"\"\n",
     "    return x**2/2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def psi_func(x, x0, sigma):\n",
-    "    \"\"\" Returns the wave function.\"\"\"\n",
+    "    \"\"\"Calculates the wave function\"\"\"\n",
     "    return np.sqrt(1/(sigma*np.sqrt(2*np.pi)))*np.exp(-(x-x0)**2/(4*sigma**2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def populate_vector(func, *args):\n",
-    "    \"\"\" Returns a vector of the given function in N range\"\"\"\n",
+    "    \"\"\"Returns a vector of the given function in N range\"\"\"\n",
     "    vector = [func(xi[i], *args) for i in range(N)]\n",
     "    return np.array(vector).reshape(-1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,67 +162,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def finite_difference_x(x, y):\n",
-    "    \"\"\"  \"\"\"\n",
-    "    return (compute_e(x+h, y) - compute_e(x-h, y))/2*h"
+    "def finite_difference(x, y, isX=False):\n",
+    "    \"\"\"Calculates the central finite difference approximation of a second order derivate.\"\"\"\n",
+    "    if isX:\n",
+    "        return (compute_e(x+h, y) - compute_e(x-h, y))/2*h\n",
+    "   \n",
+    "    return (compute_e(x , y+h) - compute_e(x, y-h))/2*h"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def finite_difference_y(x, y):\n",
-    "    return (compute_e(x , y+h) - compute_e(x, y-h))/2*h "
+    "#def finite_difference_x(x, y):\n",
+    "#    \"\"\"  \"\"\"\n",
+    "#    return (compute_e(x+h, y) - compute_e(x-h, y))/2*h"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#def finite_difference_y(x, y):\n",
+    "#    return (compute_e(x , y+h) - compute_e(x, y-h))/2*h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_step(x0, sigma):\n",
-    "    lr = 1\n",
+    "    lr = 0.1\n",
     "    # print(finite_difference_e(sigma, x0))\n",
-    "    new_x0 = x0 - lr*finite_difference_x(x0, sigma)\n",
-    "    new_sigma = sigma - lr*finite_difference_y(x0, sigma)\n",
-    "    return (new_x0, new_sigma)\n",
-    "    \n",
-    "    "
+    "    new_x0 = x0 - lr*finite_difference(x0, sigma, isX=True)\n",
+    "    new_sigma = sigma - lr*finite_difference(x0, sigma, isX=False)\n",
+    "    return (new_x0, new_sigma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_descent(x0, sigma):\n",
-    "    iterations = 0\n",
-    "    max_iterations = 2000\n",
+    "    number_of_iterations = 0 \n",
+    "    max_iterations = 2000 # Maximum number of iterations\n",
+    "    e = compute_e(x0, sigma) # Initial calculation of energy level\n",
     "    \n",
-    "    e = compute_e(x0, sigma)    \n",
+    "    while (number_of_iterations < max_iterations): # Breaks loop if maximum iterations is reached\n",
     "    \n",
-    "    while (iterations < max_iterations):\n",
-    "    \n",
-    "        new_x0, new_sigma = gradient_step(x0, sigma)\n",
-    "        new_e = compute_e(new_x0, new_sigma)\n",
+    "        new_x0, new_sigma = gradient_step(x0, sigma) # New values for x0 and sigma\n",
+    "        new_e = compute_e(new_x0, new_sigma) # New value for energy level\n",
     "        \n",
-    "        if new_e > e:\n",
-    "            break\n",
+    "        if new_e > e: # Breaks out of loop if we start ascending\n",
+    "            break \n",
     "        \n",
-    "        x0, sigma, e =  new_x0, new_sigma, new_e\n",
-    "        gradient_path_list.append([x0, sigma, e])\n",
-    "        iterations += 1\n",
+    "        x0, sigma, e =  new_x0, new_sigma, new_e # updates the variables with the new values\n",
+    "        gradient_path_list.append([x0, sigma, e]) # saving values for plotting\n",
+    "        number_of_iterations += 1\n",
     "        \n",
-    "        \n",
-    "    print(f\"Number of iterations: {iterations}\")    \n",
+    "    print(f\"Number of iterations: {number_of_iterations}\")\n",
     "    return x0, sigma"
    ]
   },
@@ -249,30 +260,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initializing vectors\n",
     "v_vector = np.array(v_func(xi)).reshape(-1, 1)\n",
-    "finite_difference_matrix = finite_difference_scheme()\n",
-    "    "
+    "finite_difference_matrix = finite_difference_scheme()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Energy at guess 6.489250466582191\n",
-      "Number of iterations: 1665\n",
-      "-1.7636153504902167e-07 0.7154409123955162\n",
-      "0.4997823853975488\n",
-      "0.4996893134958625\n"
+      "Energy at guess 4.7819643998818\n",
+      "Number of iterations: 5000\n",
+      "-1.906189396367053 2.3848364580470673\n",
+      "3.530389030811534\n",
+      "0.4999269895227437\n"
      ]
     }
    ],
@@ -1314,7 +1324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
